# graphi-t

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Run-Android.ps1  Run-Host.ps1  bin2c.cpp  out.comp.spv  out.frag.spv  out.vert.spv
.github/workflows/: cmake.yml
apps/: CMakeLists.txt
apps/benchmark/: CMakeLists.txt  app.cpp
apps/demo/: CMakeLists.txt  app.cpp
apps/demo/assets/: arrange.cl  arrange.comp  arrange.comp.spv
apps/test-runner/: CMakeLists.txt  app.cpp
apps/test-runner/tests/: json-serde.cpp  stream.cpp  util.cpp  zip.cpp
include/: args.hpp  assert.hpp  fmt.hpp  glslang.hpp  hal-timer.hpp  hal.hpp  idx.hpp  json.hpp  log.hpp  mesh.hpp  px-fmt.hpp  scoped-hal-impl.hpp  scoped-hal.hpp  stats.hpp  timer.hpp  util.hpp  vk.hpp  vmath.hpp
include/gft/: args.hpp  assert.hpp  fmt.hpp  geom.hpp  glslang.hpp  json-serde.hpp  json.hpp  log.hpp  mesh.hpp  pool.hpp  renderdoc.hpp  stats.hpp  stream.hpp  test.hpp  util.hpp  vk-sys.hpp  vk.hpp  vmath.hpp  zip.hpp
include/gft/hal/: buffer.hpp  builder.hpp  collections.hpp  context.hpp  depth-image.hpp  hal.hpp  image.hpp  instance.hpp  invocation.hpp  render-pass.hpp  renderer.hpp  scoped-hal-impl.hpp  scoped-hal.hpp  surf.hpp  swapchain.hpp  task.hpp  transaction.hpp
include/gft/platform/: macos.hpp  windows.hpp
include/gft/vk/: vk-buffer.hpp  vk-context.hpp  vk-depth-image.hpp  vk-image.hpp  vk-instance.hpp  vk-invocation.hpp  vk-render-pass.hpp  vk-swapchain.hpp  vk-task.hpp  vk-transaction.hpp  vk.hpp
include/hal/: hal-timer.hpp  hal.hpp  scoped-hal-impl.hpp  scoped-hal.hpp
scripts/: format-code.sh  gen-vmath-hpp.py
src/: args.cpp  assert.cpp  glslang.cpp  json.cpp  log.cpp  mesh.cpp  scoped-hal.cpp  util.cpp  vk.cpp
src/gft/: args.cpp  geom.cpp  glslang.cpp  json.cpp  json_serde.cpp  log.cpp  mesh.cpp  renderdoc.cpp  stream.cpp  test.cpp  util.cpp  vk.cpp  zip.cpp
src/gft/hal/: buf.cpp  builder.cpp
src/gft/platform/: macos.mm  windows.cpp
src/gft/vk/: buf.cpp  ctxt.cpp  depth-img.cpp  img.cpp  invoke.cpp  pass.cpp  renderer.cpp  surf.cpp  swapchain.cpp  sys.cpp  sys.hpp  task.cpp  transact.cpp  transact_like.cpp  vk-buffer.cpp  vk-context.cpp  vk-depth-img.cpp  vk-image.cpp  vk-instance.cpp  vk-invocation.cpp  vk-render-pass.cpp  vk-swapchain.cpp  vk-task.cpp  vk-transaction.cpp  vk.cpp
